--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -23,3 +23,9 @@
       %li= link_to 'Sign up', new_user_registration_path
       %li= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter)
       %li= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
+
+    %li= link_to "Toto", class: 'btn btn-default navbar-bt'
+
+  = button_tag class: 'btn btn-default navbar-btn', type: 'button', data: { toggle: 'modal', target: '#new_flow' } do
+    %span.glyphicon.glyphicon-plus
+    = 'New Flow'
