switching to bootstrap sass

--- a/app/assets/stylesheets/bootstrap-custom.css.scss
+++ b/app/assets/stylesheets/bootstrap-custom.css.scss
@@ -1,5 +1,5 @@
-@import "bootstrap-variables";
 @import "bootstrap";
+// @import "bootstrap/theme";
 
 body {
   padding-top: $navbar-height + 10px;
