--- a/app/views/layouts/popins/_new_flow.html.haml
+++ b/app/views/layouts/popins/_new_flow.html.haml
@@ -1,11 +1,40 @@
 #new_flow.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", role: "dialog", tabindex: "-1"}
   .modal-dialog
     .modal-content
-      .modal-header
-        %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
-        %h4#myModalLabel.modal-title Modal title
-      .modal-body
-        = 'lorem ipsum'
-      .modal-footer
-        %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Cancel
-        %button.btn.btn-primary{type: "button"} Create
+      = simple_form_for @flow do |f|
+        .modal-header
+          %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} &times;
+          %h4#myModalLabel.modal-title Create a new flow
+        .modal-body
+          = f.input :name
+
+          .toto
+            .btn-group.btn-group-justified
+              .btn-group
+                %a.btn.btn-default.dropdown-toggle{ data: { toggle: 'dropdown' } }
+                  = 'Fields'
+                  %span.caret
+                %ul.dropdown-menu{ role: 'menu' }
+                  %li
+                    %a= 'Preview'
+
+              %a.btn.btn-default{ role: 'button' }= 'Steps'
+
+              / <div class="btn-group btn-group-justified">
+              /   <div class="btn-group">
+              /     <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+              /       Right dropdown <span class="caret"></span>
+              /     </a>
+              /     <ul class="dropdown-menu" role="menu">
+              /       <li><a href="#">Action</a></li>
+              /       <li><a href="#">Another action</a></li>
+              /       <li><a href="#">Something else here</a></li>
+              /       <li class="divider"></li>
+              /       <li><a href="#">Separated link</a></li>
+              /     </ul>
+              /   </div>
+              / <a class="btn btn-default" role="button">Middle</a></div>
+
+        .modal-footer
+          = f.button :button, 'Cancel', class: 'btn-default', type: 'button', data: { dismiss: 'modal' }
+          = f.button :button, 'Create', class: 'btn-primary', type: 'button'
