--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,15 @@
 .page-header
   %h1= "#{controller_name}##{action_name}"
 %p= "Find me in #{__FILE__}"
+
+.toto
+  .btn-group.btn-group-justified
+    %a.btn.btn-default.btn-lg{ role: 'button' }= 'Steps'
+    .btn-group.btn-lg
+      %a.btn.btn-default.dropdown-toggle{ data: { toggle: 'dropdown' } }
+        = 'Fields'
+        %span.caret
+      %ul.dropdown-menu{ role: 'menu' }
+        %li
+          %a= 'Preview'
+    %a.btn.btn-default.btn-lg{ role: 'button' }= 'Steps'
