--- a/app/views/layouts/popins/_new_flow.html.haml
+++ b/app/views/layouts/popins/_new_flow.html.haml
@@ -28,8 +28,8 @@
             #fields-edit.tab-pane.fade.in.active
               .well.form-group{ draggable: 'true' }
                 %span.glyphicon.glyphicon-align-justify.pull-left{ style: 'padding-top: 8px; margin-right: 15px'}
-                %input.form-control{ type: 'text', placeholder: 'Name your Field', name: 'flow[field][name]', style: 'width:200px;'}
-                %select.form-control{ name: 'flow[field][type]', style: 'width:200px;'}
+                %input.form-control{ type: 'text', placeholder: 'Name your Field', name: 'flow[field][name]', style: ''}
+                %select.form-control{ name: 'flow[field][type]', style: ''}
                   %option{ value: '' }= 'Select a field type:'
                   %option{ value: 'text' }= 'Text'
                   %option{ value: 'email' }= 'Email'
