adding flow controllers

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -18,6 +18,9 @@
 
       %li= link_to 'Collections', collections_path
 
+      %li= link_to 'Flows', flows_path
+
+
     - else
       %li= link_to 'Login', new_user_session_path
       %li= link_to 'Sign up', new_user_registration_path
