--- a/app/views/flows/_form.html.haml
+++ b/app/views/flows/_form.html.haml
@@ -3,5 +3,14 @@
 
   .form-inputs
 
+    = f.input :name
+
+    = f.simple_fields_for :field_types do |t|
+      .panel.panel-default
+        .panel-heading
+          %h3.panel-title= t.object._type
+        .panel-body
+          = t.input :name
+
   .form-actions
     = f.button :submit
