--- a/app/views/flows/index.html.haml
+++ b/app/views/flows/index.html.haml
@@ -8,13 +8,17 @@
   %table.table.table-hover.table-condensed
     %thead
       %tr
-        %th
-        %th
-        %th
+        %th Name
+        %th FieldTypes Count
+        %th Actions
 
     %tbody
       - @flows.each do |flow|
         %tr
+          %td
+            = flow.name
+          %td
+            = flow.field_types.count
           %td
             = link_to 'Edit', edit_flow_path(flow), :class => 'btn btn-xs btn-primary'
             = link_to 'Destroy', flow, :data => { confirm: 'Are you sure?' }, :method => :delete, :class => 'btn btn-xs btn-danger'
