adding views to add a new flow (TODO: bugfix when reloading a flow with existing field_types), starting to use darwinjs and bootstrap-select

--- a/app/views/flows/_field_type_fields.html.haml
+++ b/app/views/flows/_field_type_fields.html.haml
@@ -1,7 +1,8 @@
-.panel.panel-default
+.panel.panel-default.nested-fields
   .panel-heading
     %h3.panel-title= f.object.class.name
   .panel-body
+    = f.hidden_field :_type, value: f.object.class.name
     = render partial: "/flows/#{f.object.class.name.underscore}", object: f
 
     %p
