--- a/app/views/flows/field_type/_email_type.html.haml
+++ b/app/views/flows/field_type/_email_type.html.haml
@@ -2,6 +2,7 @@
 = email_type.input :label
 = email_type.input :placeholder
 = email_type.input :help_info,       as: :text
+= email_type.input :default_value
 = email_type.input :blocked_keywords
 = email_type.input :optional,        as: :boolean, wrapper: :vertical_boolean
 = email_type.input :uniq,            as: :boolean, wrapper: :vertical_boolean
