--- a/app/views/flows/_field_type_fields.html.haml
+++ b/app/views/flows/_field_type_fields.html.haml
@@ -3,6 +3,7 @@
     %h3.panel-title= f.object.class.name
   .panel-body
     = f.hidden_field :_type, value: f.object.class.name
+    = f.hidden_field :index, value: f.index
     = render partial: "/flows/#{f.object.class.name.underscore}", object: f
 
     %p
