--- a/app/views/flows/field_type/_textarea_type.html.haml
+++ b/app/views/flows/field_type/_textarea_type.html.haml
@@ -1,1 +1,11 @@
 = textarea_type.input :name
+= textarea_type.input :label
+= textarea_type.input :placeholder
+= textarea_type.input :help_info,       as: :text
+= textarea_type.input :validation_regexp
+= textarea_type.input :default_value
+= textarea_type.input :min_char_count,  as: :integer
+= textarea_type.input :max_char_count,  as: :integer
+= textarea_type.input :height,          as: :integer
+= textarea_type.input :resizable,       as: :boolean, wrapper: :vertical_boolean
+= textarea_type.input :format,          collection: FieldType::TextareaType::FORMATS, prompt: 'Select a format type'
