--- a/app/views/flows/_form.html.haml
+++ b/app/views/flows/_form.html.haml
@@ -7,8 +7,8 @@
     = f.input :help_info, as: :text
 
     .field_type_list
-      = f.simple_fields_for :field_types do |t|
-        = render partial: '/flows/field_type_fields', locals: { f: t }
+      = f.simple_fields_for :field_types do |field_type|
+        = render 'field_type_fields', f: field_type
 
     .add_field_types.form-inline
       .form-group
@@ -23,4 +23,4 @@
           = link_to_add_association "Add a #{field_type}", f, :field_types, :wrap_object => ->(o){ o = field_type.constantize.new }, data: { :'association-insertion-node' => '.field_type_list'}, id: field_type.gsub('::', '_')
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, class: 'btn-warning'
