--- a/app/views/flows/field_type/_input_type.html.haml
+++ b/app/views/flows/field_type/_input_type.html.haml
@@ -1,9 +1,8 @@
-= input_type.input :name
-= input_type.input :label
-= input_type.input :placeholder
-= input_type.input :help_info,       as: :text
-= input_type.input :validation_regexp
-= input_type.input :default_value
-= input_type.input :min_char_count,  as: :integer
-= input_type.input :max_char_count,  as: :integer
-= input_type.input :masked,          as: :boolean, wrapper: :vertical_boolean
+= f.input :label
+= f.input :placeholder
+= f.input :help_info,       as: :text
+= f.input :validation_regexp
+= f.input :default_value
+= f.input :min_char_count,  as: :integer
+= f.input :max_char_count,  as: :integer
+= f.input :masked,          as: :boolean, wrapper: :vertical_boolean
