--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,5 @@
 .page-header
-  %h1= "#{controller_name}##{action_name}"
-%p= "Find me in #{__FILE__}"
+  %h1= "Welcome to Flowless"
+  / %h1= "#{controller_name}##{action_name}"
+/ %p= "Find me in #{__FILE__}"
+%p= "Nothing to see for the moment..."
