--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -9,20 +9,19 @@
   %ul.nav.navbar-nav
 
     - if user_signed_in?
-
-      %li= link_to 'Logout', destroy_user_session_path, :method => 'delete'
-      %li= link_to 'Edit account', edit_user_registration_path
-
-      - if current_user.has_role? :admin
-        %li= link_to 'Admin', users_path
-
-      %li= link_to 'Flows', flows_path
-
+      / %li= link_to 'Flows', flows_path
 
     - else
       %li= link_to 'Login', new_user_session_path
       %li= link_to 'Sign up', new_user_registration_path
-      %li= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter)
-      %li= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
+      / %li= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter)
+      / %li= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook)
 
-  = render partial: 'layouts/new_item'
+  - if user_signed_in?
+    %ul.nav.navbar-nav.navbar-right
+      - if current_user.has_role? :admin
+        %li= link_to 'Admin', users_path
+      %li= link_to 'Edit account', edit_user_registration_path
+      %li= link_to 'Logout', destroy_user_session_path, :method => 'delete'
+
+    = render partial: 'layouts/new_item' unless Flow.available_to(current_user).empty?
