--- a/app/views/flows/index.html.haml
+++ b/app/views/flows/index.html.haml
@@ -9,7 +9,8 @@
     %thead
       %tr
         %th Name
-        %th FieldTypes Count
+        %th Number of Fields
+        %th Number of Items
         %th Actions
 
     %tbody
@@ -20,5 +21,8 @@
           %td
             = flow.field_types.count
           %td
+            = flow.items.count
+          %td
+            = link_to 'Show', flow_path(flow), :class => 'btn btn-xs btn-default'
             = link_to 'Edit', edit_flow_path(flow), :class => 'btn btn-xs btn-primary'
             = link_to 'Destroy', flow, :data => { confirm: 'Are you sure?' }, :method => :delete, :class => 'btn btn-xs btn-danger'
