--- a/app/views/layouts/_flash_messages.html.haml
+++ b/app/views/layouts/_flash_messages.html.haml
@@ -1,5 +1,7 @@
 - flash.each do |name, msg|
   - if msg.is_a?(String)
-    %div{:class => "alert alert-#{name == :notice ? "success" : "error"}"}
-      %a.close{"data-dismiss" => "alert"} ×
-      = content_tag :div, msg, :id => "flash_#{name}"
+    .alert.alert-dismissible{ role: 'alert', class: "alert-#{set_flash_message_type_for_bootstrap(name)}" }
+      %button.close{ type: 'button', role: 'alert', data: { dismiss: 'alert' } }
+        %span{ aria: { hidden: 'true' } } &times;
+        %span.sr-only= 'Close'
+      = msg.html_safe
