--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
       .container
         = render 'layouts/navigation'
     .container
-      = render 'layouts/messages'
+      = render 'layouts/flash_messages'
       .row
         = yield
 
