allow for edit of existing items by creating a new layer of field values, but persisting only the ones that a different

--- a/app/views/items/_field_container_fields.html.haml
+++ b/app/views/items/_field_container_fields.html.haml
@@ -1,2 +1,2 @@
-= f.simple_fields_for :field_values do |field_value|
+= f.simple_fields_for :field_values, f.object.non_persisted_field_values do |field_value|
   = render 'field_value_fields', f: field_value
