--- a/app/views/items/_field_value_fields.html.haml
+++ b/app/views/items/_field_value_fields.html.haml
@@ -4,5 +4,6 @@
     %h3.panel-title= f.object.field_type.name.capitalize
 
   .panel-body
-    = f.hidden_field :_type#, value: f.object.class.name
+    = f.hidden_field :_type
+    = f.hidden_field :current_value, value: f.object.value
     = render 'items/' + f.object.class.name.underscore, f: f
