--- a/app/views/flows/field_type/_input_type.html.haml
+++ b/app/views/flows/field_type/_input_type.html.haml
@@ -6,3 +6,5 @@
 = f.input :min_char_count,  as: :integer
 = f.input :max_char_count,  as: :integer
 = f.input :masked,          as: :boolean, wrapper: :vertical_boolean
+= f.input :optional,        as: :boolean, wrapper: :vertical_boolean
+= f.input :uniq,            as: :boolean, wrapper: :vertical_boolean
