--- a/app/views/items/_field_value_fields.html.haml
+++ b/app/views/items/_field_value_fields.html.haml
@@ -6,4 +6,4 @@
   .panel-body
     = f.hidden_field :_type
     = f.hidden_field :current_value#, value: f.object.value
-    = render 'items/' + f.object.class.name.underscore, f: f
+    = render 'items/form/' + f.object.class.name.underscore, f: f
