fixing typo from uniq to unique

--- a/app/views/flows/field_type/_email_type.html.haml
+++ b/app/views/flows/field_type/_email_type.html.haml
@@ -4,5 +4,5 @@
 = f.input :default_value
 = f.input :blocked_keywords
 = f.input :optional,        as: :boolean, wrapper: :vertical_boolean
-= f.input :uniq,            as: :boolean, wrapper: :vertical_boolean
+= f.input :unique,            as: :boolean, wrapper: :vertical_boolean
 = f.input :multiple_emails, as: :boolean, wrapper: :vertical_boolean
