--- a/app/views/flows/field_type/_input_type.html.haml
+++ b/app/views/flows/field_type/_input_type.html.haml
@@ -7,4 +7,4 @@
 = f.input :max_char_count,  as: :integer
 = f.input :masked,          as: :boolean, wrapper: :vertical_boolean
 = f.input :optional,        as: :boolean, wrapper: :vertical_boolean
-= f.input :uniq,            as: :boolean, wrapper: :vertical_boolean
+= f.input :unique,            as: :boolean, wrapper: :vertical_boolean
