--- a/app/views/flows/field_type/_textarea_type.html.haml
+++ b/app/views/flows/field_type/_textarea_type.html.haml
@@ -9,4 +9,4 @@
 = f.input :resizable,       as: :boolean, wrapper: :vertical_boolean
 = f.input :format,          collection: FieldType::TextareaType::FORMATS, prompt: 'Select a format type'
 = f.input :optional,        as: :boolean, wrapper: :vertical_boolean
-= f.input :uniq,            as: :boolean, wrapper: :vertical_boolean
+= f.input :unique,            as: :boolean, wrapper: :vertical_boolean
