adding some basics form look & feel

--- a/app/views/flows/show.html.haml
+++ b/app/views/flows/show.html.haml
@@ -5,7 +5,7 @@
   = link_to edit_flow_path(@flow), :class => 'btn btn-primary' do
     %span.glyphicon.glyphicon-pencil
     Edit
-  %h1 Show flow
+  %h1= @flow.name
 
 %dl.dl-horizontal
 
