first draft of ajax adding items

--- a/app/views/items/form/field_value/_email_value.html.haml
+++ b/app/views/items/form/field_value/_email_value.html.haml
@@ -1,2 +1,6 @@
 - field_type = f.object.field_type
-= f.input :value, label: field_type.label, placeholder: field_type.placeholder, input_html: { value: field_type.default_value }, hint: ((field_type.unique? ? 'This value must be unique within the flow. ' : '') + field_type.help_info), wrapper: (field_type.label.blank? ? :inline_form : :vertical_form), required: field_type.required?
+- options = { }
+- if field_type.default_value && f.object.value.blank?
+  - options.merge({ value: field_type.default_value })
+
+= f.input :value, label: field_type.label, placeholder: field_type.placeholder, input_html: options, hint: ((field_type.unique? ? 'This value must be unique within the flow. ' : '') + field_type.help_info), wrapper: (field_type.label.blank? ? :inline_form : :vertical_form), required: field_type.required?
