--- a/app/views/layouts/_new_item.html.haml
+++ b/app/views/layouts/_new_item.html.haml
@@ -1,5 +1,6 @@
-= select_tag :available_flows, options_for_select(Flow.available_to(User.first).map{|f| [f.name, f.id.to_s]}), prompt: 'Choose a flow to add an item to it', class: 'form-control'
+%li{ data: { module: 'NewItem.Select', url: new_flow_item_path(':flow_id') } }
+  = select_tag :available_flows, options_for_select(Flow.available_to(User.first).map{|f| [f.name, f.id.to_s]}), prompt: 'Choose a flow to add an item to it', class: 'form-control'
 
-= button_tag class: 'btn navbar-btn btn-warning', type: 'button', data: { toggle: 'modal', target: '#new_item' } do
-  %span.glyphicon.glyphicon-plus
-  = 'New Item'
+  = button_tag class: 'btn navbar-btn btn-warning', type: 'button', id: 'add_new_item', data: { toggle: 'modal', target: '#new_item' } do
+    %span.glyphicon.glyphicon-plus
+    = 'New Item'
