rendering a separte view for the new item modal

--- a/app/views/layouts/popins/_new_item.html.haml
+++ b/app/views/layouts/popins/_new_item.html.haml
@@ -1,11 +1,3 @@
-#new_item.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", role: "dialog", tabindex: "-1"}
+#new_item.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "new-item-modal", role: "dialog", tabindex: "-1"}
   .modal-dialog
     .modal-content
-      .modal-header
-        %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} &times;
-        %h4#myModalLabel.modal-title Create a new item
-      .modal-body
-
-      .modal-footer
-        / = f.button :button, 'Cancel', class: 'btn-default', type: 'button', data: { dismiss: 'modal' }
-        / = f.button :button, 'Create', class: 'btn-primary', type: 'button'
