--- a/app/views/items/_new_modal.html.haml
+++ b/app/views/items/_new_modal.html.haml
@@ -1,5 +1,4 @@
-= simple_form_for [@flow, @item] do |f|
-  = f.error_notification
+= simple_form_for [@flow, @item], remote: true do |f|
   = f.hidden_field :status
 
   .modal-header
@@ -7,6 +6,8 @@
     %h4#new-item-modal.modal-title= "Create a new item for #{@flow.name} flow"
 
   .modal-body
+    = f.error_notification
+
     = f.simple_fields_for :field_containers do |field_container|
       = field_container.hidden_field :field_type_id
       = render 'field_container_fields', f: field_container
