--- a/app/views/layouts/modals/_new_item.html.haml
+++ b/app/views/layouts/modals/_new_item.html.haml
@@ -1,3 +1,3 @@
-#new_item.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "new-item-modal", role: "dialog", tabindex: "-1"}
+.modal#new_item.fade{ data: { module: 'NewItem.Modal' }, aria: { hidden: 'true', labelledby: 'new-item-modal' }, role: 'dialog', tabindex: '-1'}
   .modal-dialog
     .modal-content
