--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -3,6 +3,6 @@
 
   = simple_form_for resource, :as => resource_name, :url => confirmation_path(resource_name), :html => {:method => :post } do |f|
     = f.input :email, :required => true, :autofocus => true
-    = f.button :submit, 'Resend confirmation instructions', :class => 'btn-primary'
+    = f.button :submit, 'Resend confirmation instructions', :class => 'btn-primary', 'data-loading-text' => 'Sending...'
 
   = render "devise/shared/links"
