--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -5,6 +5,6 @@
     = f.hidden_field :reset_password_token
     = f.input :password, :required => true, :autofocus => true
     = f.input :password_confirmation, :required => true
-    = f.button :submit, 'Change my password', :class => 'btn-primary'
+    = f.button :submit, 'Change my password', :class => 'btn-primary', 'data-loading-text' => 'Changing...'
 
   = render "devise/shared/links"
