--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -10,7 +10,7 @@
     = f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false
     = f.input :password_confirmation, :required => false
 
-    = f.button :submit, 'Update', :class => 'btn-primary'
+    = f.button :submit, 'Update', :class => 'btn-primary', 'data-loading-text' => 'Updating...'
 
   %h3 Cancel my account
   %p
