--- a/app/views/flows/_form.html.haml
+++ b/app/views/flows/_form.html.haml
@@ -23,4 +23,4 @@
           = link_to_add_association "Add a #{field_type}", f, :field_types, :wrap_object => ->(o){ o = field_type.constantize.new }, data: { :'association-insertion-node' => '.field_type_list'}, id: field_type.gsub('::', '_')
 
   .form-actions
-    = f.button :submit, class: 'btn-warning'
+    = f.button :submit, class: 'btn-warning', 'data-loading-text' => 'Saving...'
