--- a/app/views/items/_form.html.haml
+++ b/app/views/items/_form.html.haml
@@ -9,4 +9,4 @@
       = render 'field_container_fields', f: field_container
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, 'data-loading-text' => 'Saving...'
