--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,3 +1,3 @@
 = simple_form_for @user do |f|
   = f.input :email
-  = f.button :submit, class: 'btn-primary'
+  = f.button :submit, class: 'btn-primary', 'data-loading-text' => 'Saving...'
