--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -9,5 +9,5 @@
           .marg-left-15px
             = f.input :roles, :collection => AppConfig.roles, :as => :check_boxes, :label_method => lambda {|r| r.titleize}, :label => false, checked: user.roles
         .modal-footer
-          = f.submit "Change Role", :class => "btn btn-primary"
+          = f.submit "Change Role", :class => "btn btn-primary", 'data-loading-text' => 'Saving...'
           = link_to 'Close', '#', class: 'btn', data: { dismiss: 'modal' }
