--- a/app/views/items/_field_value_fields.html.haml
+++ b/app/views/items/_field_value_fields.html.haml
@@ -1,9 +1,12 @@
 .panel.panel-default.nested-fields
 
   .panel-heading
-    %h3.panel-title= f.object.field_type.name.capitalize
+    %h3.panel-title
+      %button{ type: 'button', class: 'btn btn-link popover-dismiss', title: 'Validation rules', data: { toggle: 'popover', placement: 'top', html: 'true', content: render('items/popover/' + f.object.class.name.underscore, field_value: f.object) } }
+        %span.glyphicon.glyphicon-info-sign
+      = f.object.field_type.name.capitalize
 
   .panel-body
     = f.hidden_field :_type
-    = f.hidden_field :current_value#, value: f.object.value
+    = f.hidden_field :current_value
     = render 'items/form/' + f.object.class.name.underscore, f: f
