--- a/app/views/items/form/field_value/_input_value.html.haml
+++ b/app/views/items/form/field_value/_input_value.html.haml
@@ -3,4 +3,4 @@
 - if field_type.default_value && f.object.value.blank?
   - options.merge({ value: field_type.default_value })
 
-= f.input :value, label: field_type.label, placeholder: field_type.placeholder, input_html: options, hint: ((field_type.unique? ? 'This value must be unique within the flow. ' : '') + field_type.help_info), wrapper: (field_type.label.blank? ? :inline_form : :vertical_form), required: field_type.required?
+= f.input :value, label: field_type.label, placeholder: field_type.placeholder, input_html: options, hint: ((field_type.unique? ? 'This value must be unique within the flow. ' : '') + field_type.help_info), wrapper: (field_type.label.blank? ? :inline_form : :vertical_form), required: false
