--- a/app/views/items/new.js.haml
+++ b/app/views/items/new.js.haml
@@ -1,2 +1,3 @@
-$('#new_item .modal-content').html("#{ j render 'new_modal' }");
+$('#new_item .modal-content').html("#{ j render 'new_modal' }")
+$('#new_item .popover-dismiss').popover()
 $('#item_field_containers_attributes_0_field_values_attributes_0_value').focus()
